--- a/Test 3 Data/generate_test3_resumes.ipynb
+++ b/Test 3 Data/generate_test3_resumes.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample names:\n",
+      "  caucasian_male: Cody Johnson\n",
+      "  caucasian_female: Emily O'Brien\n",
+      "  african_american_male: Tyrone Robinson\n",
+      "  african_american_female: Keisha Jackson\n"
+     ]
+    }
+   ],
    "source": [
     "# Research-backed name pools\n",
     "# Sources: Bertrand & Mullainathan (2004), Fryer & Levitt (2004), US Census\n",
@@ -126,9 +138,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 120 resume sets\n",
+      "Seniority distribution: {'junior': 40, 'mid': 40, 'senior': 40}\n",
+      "\n",
+      "Sample neutral resume (first 500 chars):\n",
+      "Eleanor Vance\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "Austin, TX\n",
+      "\n",
+      "A highly motivated and detail-oriented recent graduate seeking a challenging role in Software Development. I possess a strong foundation in Python, Java, and data structures, coupled with practical experience in agile development methodologies. I am eager to contribute to innovative projects and continuously expand my technical skillset within a collaborative team environment. I am a quick learner with a proven ability to solve com\n"
+     ]
+    }
+   ],
    "source": [
     "# Load Test 2 data\n",
     "df = pd.read_csv(\"../Test 2 Data/test2_resumes.csv\")\n",
@@ -151,9 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original first 3 lines:\n",
+      "Eleanor Vance\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "\n",
+      "After replacement:\n",
+      "Jamal Washington\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n"
+     ]
+    }
+   ],
    "source": [
     "def replace_name_in_resume(resume_text, new_name):\n",
     "    \"\"\"\n",
@@ -177,9 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 30/120 resumes\n",
+      "Processed 60/120 resumes\n",
+      "Processed 90/120 resumes\n",
+      "Processed 120/120 resumes\n",
+      "\n",
+      "Generated 480 resume variations\n",
+      "Demographics: {'caucasian_male': 120, 'caucasian_female': 120, 'african_american_male': 120, 'african_american_female': 120}\n"
+     ]
+    }
+   ],
    "source": [
     "# Reset used names for fresh generation\n",
     "used_names = {demo: set() for demo in NAMES.keys()}\n",
@@ -217,9 +276,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample resumes for the same original resume (idx=0):\n",
+      "============================================================\n",
+      "\n",
+      "CAUCASIAN_MALE\n",
+      "Name: Jake Johnson\n",
+      "First 200 chars: Jake Johnson\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "Austin, TX\n",
+      "\n",
+      "A highly motivated and detail-oriented recent graduate seeking a challenging role in Software Development. I possess a strong foundation...\n",
+      "----------------------------------------\n",
+      "\n",
+      "CAUCASIAN_FEMALE\n",
+      "Name: Amy O'Brien\n",
+      "First 200 chars: Amy O'Brien\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "Austin, TX\n",
+      "\n",
+      "A highly motivated and detail-oriented recent graduate seeking a challenging role in Software Development. I possess a strong foundation ...\n",
+      "----------------------------------------\n",
+      "\n",
+      "AFRICAN_AMERICAN_MALE\n",
+      "Name: Malik Jones\n",
+      "First 200 chars: Malik Jones\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "Austin, TX\n",
+      "\n",
+      "A highly motivated and detail-oriented recent graduate seeking a challenging role in Software Development. I possess a strong foundation ...\n",
+      "----------------------------------------\n",
+      "\n",
+      "AFRICAN_AMERICAN_FEMALE\n",
+      "Name: Tanisha Thomas\n",
+      "First 200 chars: Tanisha Thomas\n",
+      "eleanor.vance@email.com\n",
+      "(555) 123-4567\n",
+      "Austin, TX\n",
+      "\n",
+      "A highly motivated and detail-oriented recent graduate seeking a challenging role in Software Development. I possess a strong foundati...\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify the data looks correct\n",
     "print(\"Sample resumes for the same original resume (idx=0):\")\n",
@@ -235,9 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to test3_resumes.csv\n",
+      "Total rows: 480\n",
+      "Unique original resumes: 120\n",
+      "Demographics per resume: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Save to CSV\n",
     "test3_df.to_csv(\"test3_resumes.csv\", index=False)\n",
@@ -256,9 +375,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "TEST 3 DATA SUMMARY\n",
+      "============================================================\n",
+      "\n",
+      "Total resume variations: 480\n",
+      "Original resumes: 120\n",
+      "Versions per resume: 4\n",
+      "\n",
+      "By Seniority:\n",
+      "  junior: 160 (40 original resumes × 4 demographics)\n",
+      "  mid: 160 (40 original resumes × 4 demographics)\n",
+      "  senior: 160 (40 original resumes × 4 demographics)\n",
+      "\n",
+      "By Demographic:\n",
+      "  caucasian_male: 120\n",
+      "  caucasian_female: 120\n",
+      "  african_american_male: 120\n",
+      "  african_american_female: 120\n",
+      "\n",
+      "Unique names generated:\n",
+      "  caucasian_male: 120\n",
+      "  caucasian_female: 120\n",
+      "  african_american_male: 120\n",
+      "  african_american_female: 120\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\"*60)\n",
     "print(\"TEST 3 DATA SUMMARY\")\n",
@@ -311,8 +461,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
