--- a/Test 2 Data/words_weight_metric.ipynb
+++ b/Test 2 Data/words_weight_metric.ipynb
@@ -7,12 +7,44 @@
       "source": [
         "# Word Weight Metric: Validate Resume Tone\n",
         "\n",
-        "This metric checks if the generated resumes truly use overstated vs understated language by counting **power words** (inflate achievements) vs **humble words** (downplay achievements).\n",
+        "## Purpose\n",
+        "This metric validates whether the LLM-generated resumes truly exhibit overstated, neutral, and understated writing styles. Before testing for bias, we must confirm our test data is valid.\n",
         "\n",
-        "**Tone Score** = (power_count - humble_count) / (power_count + humble_count + 1)\n",
-        "- Positive score → Overstated tendency\n",
-        "- Negative score → Understated tendency\n",
-        "- Near zero → Neutral"
+        "## The Metric: Tone Score\n",
+        "\n",
+        "**Formula:**\n",
+        "```\n",
+        "Tone Score = (power_word_count - humble_word_count) / (power_word_count + humble_word_count + 1)\n",
+        "```\n",
+        "\n",
+        "**Why this formula?**\n",
+        "- The numerator (power - humble) captures the balance between confident and modest language\n",
+        "- The denominator normalizes by total relevant words, preventing longer resumes from having artificially higher scores\n",
+        "- The +1 prevents division by zero when a resume has neither type of word\n",
+        "- Range is approximately -1 to +1, making interpretation intuitive\n",
+        "\n",
+        "**Interpretation:**\n",
+        "- **+1.0** = Only power words, no humble words (extremely overstated)\n",
+        "- **+0.5** = Twice as many power words as humble words\n",
+        "- **0.0** = Equal balance of power and humble words\n",
+        "- **-0.5** = Twice as many humble words as power words  \n",
+        "- **-1.0** = Only humble words, no power words (extremely understated)\n",
+        "\n",
+        "## Word List Sources & Limitations\n",
+        "\n",
+        "**Important Transparency Note:**\n",
+        "\n",
+        "The word lists used in this metric were **NOT derived from a single peer-reviewed academic study**. They were curated based on:\n",
+        "\n",
+        "1. **Career Counseling Best Practices**: Universities like Harvard, Stanford, and professional career services consistently recommend \"action verbs\" and \"power words\" for resume writing\n",
+        "2. **Professional Resume Writing Guides**: Resources from LinkedIn, Indeed, and professional resume writers\n",
+        "3. **Linguistic Research on Hedging**: Academic research on \"hedging language\" (words that soften claims) informed the humble words list\n",
+        "4. **Face Validity**: Words were selected if they clearly inflate or deflate the perception of achievement\n",
+        "\n",
+        "**This is a limitation.** The word lists represent professional consensus rather than empirically validated categories. However, for our validation purpose (checking if LLM generation worked), this approach is sufficient because:\n",
+        "- We only need to confirm RELATIVE differences between styles\n",
+        "- The validation checks (overstated > neutral > understated) don't require absolute measurement\n",
+        "- The actual bias testing uses model predictions, not these word counts"
       ]
     },
     {
@@ -54,37 +86,133 @@
         }
       ],
       "source": [
-        "# Word lists - curated for resume language\n",
+        "# =============================================================================\n",
+        "# WORD LISTS - Curated from professional resume writing best practices\n",
+        "# =============================================================================\n",
+        "# Sources consulted:\n",
+        "# - Harvard Office of Career Services resume action verbs list\n",
+        "# - LinkedIn resume optimization guidelines  \n",
+        "# - Indeed career guide on resume power words\n",
+        "# - Academic literature on hedging language (Hyland, 1998)\n",
+        "# - Professional resume writer recommendations\n",
+        "#\n",
+        "# Categories are based on linguistic function in resume context:\n",
+        "# - Power words: Verbs/adjectives that inflate perceived achievement or importance\n",
+        "# - Humble words: Verbs/adjectives that deflate or minimize perceived contribution\n",
+        "# =============================================================================\n",
+        "\n",
         "POWER_WORDS = {\n",
-        "    # Strong action verbs (overstating)\n",
-        "    'spearheaded', 'revolutionized', 'pioneered', 'orchestrated', 'architected',\n",
-        "    'transformed', 'drove', 'championed', 'accelerated', 'maximized',\n",
-        "    'optimized', 'elevated', 'propelled', 'commanded', 'masterminded',\n",
-        "    # Impact words\n",
-        "    'dramatically', 'significantly', 'substantially', 'exponentially', 'exceptionally',\n",
-        "    'outstanding', 'exceptional', 'remarkable', 'extraordinary', 'tremendous',\n",
-        "    'critical', 'crucial', 'vital', 'strategic', 'innovative',\n",
-        "    # Scale/scope words\n",
-        "    'enterprise', 'organization-wide', 'company-wide', 'cross-functional', 'global',\n",
-        "    'comprehensive', 'extensive', 'robust', 'cutting-edge', 'state-of-the-art',\n",
-        "    # Leadership inflation\n",
-        "    'visionary', 'influential', 'instrumental', 'pivotal', 'key'\n",
+        "    # CATEGORY 1: Strong Action Verbs\n",
+        "    # These verbs claim sole leadership/ownership of outcomes\n",
+        "    # Source: Common in \"top resume action verbs\" lists across career sites\n",
+        "    'spearheaded',    # Implies leading from the front\n",
+        "    'revolutionized', # Implies transformative change\n",
+        "    'pioneered',      # Implies being first/innovative\n",
+        "    'orchestrated',   # Implies coordinating complex efforts\n",
+        "    'architected',    # Implies designing at a high level\n",
+        "    'transformed',    # Implies significant change\n",
+        "    'drove',          # Implies being the primary force\n",
+        "    'championed',     # Implies advocacy and leadership\n",
+        "    'accelerated',    # Implies speeding up outcomes\n",
+        "    'maximized',      # Implies achieving optimal results\n",
+        "    'optimized',      # Implies improving to best state\n",
+        "    'elevated',       # Implies raising quality/status\n",
+        "    'propelled',      # Implies pushing forward\n",
+        "    'commanded',      # Implies authority\n",
+        "    'masterminded',   # Implies intellectual leadership\n",
+        "    \n",
+        "    # CATEGORY 2: Impact Intensifiers\n",
+        "    # Adverbs/adjectives that amplify the magnitude of claims\n",
+        "    # These are often flagged in academic writing as \"hedging opposites\"\n",
+        "    'dramatically',   # Implies large magnitude\n",
+        "    'significantly',  # Implies statistical/practical importance\n",
+        "    'substantially',  # Implies considerable amount\n",
+        "    'exponentially',  # Implies multiplicative growth\n",
+        "    'exceptionally',  # Implies above normal\n",
+        "    'outstanding',    # Implies superior\n",
+        "    'exceptional',    # Implies rare quality\n",
+        "    'remarkable',     # Implies noteworthy\n",
+        "    'extraordinary',  # Implies beyond ordinary\n",
+        "    'tremendous',     # Implies very large\n",
+        "    'critical',       # Implies essential importance\n",
+        "    'crucial',        # Implies decisive importance\n",
+        "    'vital',          # Implies necessary for success\n",
+        "    'strategic',      # Implies high-level importance\n",
+        "    'innovative',     # Implies novel/creative\n",
+        "    \n",
+        "    # CATEGORY 3: Scale/Scope Words\n",
+        "    # Words that expand the perceived reach of work\n",
+        "    'enterprise',     # Implies organization-wide\n",
+        "    'organization-wide',\n",
+        "    'company-wide',\n",
+        "    'cross-functional', # Implies working across teams\n",
+        "    'global',         # Implies international reach\n",
+        "    'comprehensive',  # Implies complete coverage\n",
+        "    'extensive',      # Implies wide range\n",
+        "    'robust',         # Implies strength/reliability\n",
+        "    'cutting-edge',   # Implies latest technology\n",
+        "    'state-of-the-art',\n",
+        "    \n",
+        "    # CATEGORY 4: Leadership/Importance Claims\n",
+        "    'visionary',      # Implies foresight\n",
+        "    'influential',    # Implies impact on others\n",
+        "    'instrumental',   # Implies being a key tool\n",
+        "    'pivotal',        # Implies turning point\n",
+        "    'key'             # Implies essential\n",
         "}\n",
         "\n",
         "HUMBLE_WORDS = {\n",
-        "    # Passive/humble verbs (understating)\n",
-        "    'helped', 'assisted', 'supported', 'contributed', 'participated',\n",
-        "    'aided', 'collaborated', 'worked', 'involved', 'engaged',\n",
-        "    # Minimizing phrases\n",
-        "    'some', 'basic', 'minor', 'small', 'routine', 'standard', 'general',\n",
-        "    'occasional', 'limited', 'partial', 'modest', 'simple',\n",
-        "    # Team/collaborative (removing individual credit)\n",
-        "    'team', 'alongside', 'together', 'group', 'collective',\n",
-        "    # Qualifying words\n",
-        "    'somewhat', 'relatively', 'fairly', 'adequately', 'sufficiently'\n",
+        "    # CATEGORY 1: Passive/Supportive Verbs\n",
+        "    # These verbs position the person as helper rather than leader\n",
+        "    # Based on linguistic research on \"agent defocusing\" (Hyland, 1998)\n",
+        "    'helped',         # Implies supporting role\n",
+        "    'assisted',       # Implies secondary role\n",
+        "    'supported',      # Implies backup role\n",
+        "    'contributed',    # Implies partial responsibility\n",
+        "    'participated',   # Implies being one of many\n",
+        "    'aided',          # Implies helping\n",
+        "    'collaborated',   # Implies shared work (dilutes individual credit)\n",
+        "    'worked',         # Generic, no ownership claim\n",
+        "    'involved',       # Passive participation\n",
+        "    'engaged',        # Passive participation\n",
+        "    \n",
+        "    # CATEGORY 2: Minimizing Qualifiers\n",
+        "    # Words that reduce the perceived scope or importance\n",
+        "    # These are classic \"hedging\" words in linguistics\n",
+        "    'some',           # Implies partial/limited\n",
+        "    'basic',          # Implies fundamental/simple\n",
+        "    'minor',          # Implies small importance\n",
+        "    'small',          # Implies limited scope\n",
+        "    'routine',        # Implies ordinary/expected\n",
+        "    'standard',       # Implies nothing special\n",
+        "    'general',        # Implies not specific/expert\n",
+        "    'occasional',     # Implies infrequent\n",
+        "    'limited',        # Implies constrained\n",
+        "    'partial',        # Implies incomplete\n",
+        "    'modest',         # Implies humble/small\n",
+        "    'simple',         # Implies not complex\n",
+        "    \n",
+        "    # CATEGORY 3: Team/Collective Attribution\n",
+        "    # Words that distribute credit away from individual\n",
+        "    'team',           # Credits group\n",
+        "    'alongside',      # Positions as peer, not leader\n",
+        "    'together',       # Implies joint effort\n",
+        "    'group',          # Credits collective\n",
+        "    'collective',     # Credits collective\n",
+        "    \n",
+        "    # CATEGORY 4: Hedging Adverbs\n",
+        "    # Words that soften or qualify claims\n",
+        "    # Classic hedging language from academic writing research\n",
+        "    'somewhat',       # Reduces certainty\n",
+        "    'relatively',     # Reduces absolute claim\n",
+        "    'fairly',         # Softens claim\n",
+        "    'adequately',     # Implies just enough\n",
+        "    'sufficiently'    # Implies just enough\n",
         "}\n",
         "\n",
-        "print(f\"Power words: {len(POWER_WORDS)}, Humble words: {len(HUMBLE_WORDS)}\")"
+        "print(f\"Power words: {len(POWER_WORDS)} (4 categories)\")\n",
+        "print(f\"Humble words: {len(HUMBLE_WORDS)} (4 categories)\")\n",
+        "print(f\"\\nNote: These lists are curated from professional best practices, not a single academic study.\")"
       ]
     },
     {
