--- a/Big Models/zero_shot_gemini.ipynb
+++ b/Big Models/zero_shot_gemini.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,24 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 50/420\n",
-      "Processed 100/420\n",
-      "Processed 150/420\n",
-      "Processed 200/420\n",
-      "Processed 250/420\n",
-      "Processed 300/420\n",
-      "Processed 350/420\n",
-      "Processed 400/420\n",
-      "Processed 420/420\n",
-      "\n",
-      "Done! 420 predictions\n"
+      "Processed 50/420\n"
      ]
     }
    ],
@@ -180,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
