added semantic simularities for summaries

--- a/Summary_Metrics_Evaluation.ipynb
+++ b/Summary_Metrics_Evaluation.ipynb
@@ -72,9 +72,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Metric 2: Content Similarity to Resume (TF-IDF Cosine Similarity)\n",
+        "## Metric 2: Content Similarity to Resume (Semantic Similarity)\n",
         "\n",
-        "How well does each summary reflect the actual resume content?"
+        "How well does each summary reflect the actual resume content? Using sentence embeddings to capture meaning."
       ]
     },
     {
@@ -95,8 +95,11 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sentence_transformers import SentenceTransformer\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "\n",
+        "# Load semantic embedding model\n",
+        "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
         "\n",
         "# Load resume data\n",
         "df = pd.read_csv('cleaned_resumes.csv')\n",
@@ -108,20 +111,21 @@
         "df['original_summary'] = df.index.astype(str).map(original_summaries).fillna('')\n",
         "df['generated_summary'] = df.index.astype(str).map(generated_summaries).fillna('')\n",
         "\n",
-        "# Calculate similarity for sample (first 1000)\n",
-        "tfidf = TfidfVectorizer(stop_words='english', max_features=3000)\n",
+        "# Calculate semantic similarity for sample (first 1000)\n",
         "sample = df.head(1000)\n",
         "\n",
         "orig_sims, gen_sims = [], []\n",
         "for idx, row in sample.iterrows():\n",
         "    if row['resume_text'].strip() and row['original_summary'].strip():\n",
-        "        mat = tfidf.fit_transform([row['resume_text'], row['original_summary']])\n",
-        "        orig_sims.append(cosine_similarity(mat[0:1], mat[1:2])[0][0])\n",
+        "        embeddings = model.encode([row['resume_text'], row['original_summary']])\n",
+        "        sim = cosine_similarity([embeddings[0]], [embeddings[1]])[0][0]\n",
+        "        orig_sims.append(sim)\n",
         "    if row['resume_text'].strip() and row['generated_summary'].strip():\n",
-        "        mat = tfidf.fit_transform([row['resume_text'], row['generated_summary']])\n",
-        "        gen_sims.append(cosine_similarity(mat[0:1], mat[1:2])[0][0])\n",
+        "        embeddings = model.encode([row['resume_text'], row['generated_summary']])\n",
+        "        sim = cosine_similarity([embeddings[0]], [embeddings[1]])[0][0]\n",
+        "        gen_sims.append(sim)\n",
         "\n",
-        "print(\"CONTENT SIMILARITY TO RESUME\")\n",
+        "print(\"SEMANTIC SIMILARITY TO RESUME\")\n",
         "print(f\"{'Metric':<20} {'Original':<15} {'Generated':<15}\")\n",
         "print(\"-\" * 40)\n",
         "print(f\"{'Mean Similarity':<20} {np.mean(orig_sims):.3f}{'':<10} {np.mean(gen_sims):.3f}\")"
@@ -168,7 +172,7 @@
         "# Similarity Distribution\n",
         "axes[1].hist(orig_sims, bins=20, alpha=0.6, label=f'Original (avg: {np.mean(orig_sims):.3f})', color='blue')\n",
         "axes[1].hist(gen_sims, bins=20, alpha=0.6, label=f'Generated (avg: {np.mean(gen_sims):.3f})', color='green')\n",
-        "axes[1].set_xlabel('Cosine Similarity')\n",
+        "axes[1].set_xlabel('Semantic Similarity')\n",
         "axes[1].set_ylabel('Frequency')\n",
         "axes[1].set_title('Content Similarity to Resume')\n",
         "axes[1].legend()\n",
